--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "react-use": "^17.4.0",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
